# ZetaXDP

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
docs/: benchmarking.md
include/zetaxdp/: cli.h  cli_gen.h  csv.h  modes.h  payload.h  seq.h  stats.h  util.h
scripts/: gen_vmlinux_h.sh  nic_tune.sh
src/: cli.cpp  cli_gen.cpp  csv.cpp  main.cpp  mode_socket.cpp  mode_xdp.cpp  seq.cpp  stats.cpp  util.cpp
tools/: generator.cpp
xdp/: README.md  zeta_xdp_kern.c
